pdf separate fragments

--- a/02_rigid_motions/02_rigid_motions.qmd
+++ b/02_rigid_motions/02_rigid_motions.qmd
@@ -14,6 +14,7 @@ format:
     chalkboard:
       buttons: false
     preview-links: auto
+    pdf-separate-fragments: true
     theme: [white, custom.scss]
     standalone: false
     self-contained: false
